# Plonky3

./: Cargo.toml
blake3-air/: Cargo.toml
blake3/src/: lib.rs
circle/: Cargo.toml
circle/src/: folding.rs  pcs.rs  prover.rs  verifier.rs
examples/: Cargo.toml
examples/src/: proofs.rs  types.rs
keccak-air/: Cargo.toml
keccak-air/examples/: prove_baby_bear_sha256.rs  prove_baby_bear_sha256_compress.rs  prove_goldilocks_keccak.rs  prove_goldilocks_poseidon2.rs  prove_goldilocks_sha256.rs  prove_m31_sha256.rs
keccak/src/: lib.rs
ldt/: Cargo.toml
ldt/benches/: fold_even_odd.rs  stir.rs
ldt/src/: lib.rs
ldt/src/fri/: hiding_pcs.rs  mod.rs  prover.rs  two_adic_pcs.rs  verifier.rs
ldt/src/ldt/: fri_ldt.rs  mod.rs  stir_ldt.rs
ldt/src/stir/: README.md  mod.rs  test_utils.rs  utils.rs
ldt/src/stir/config/: mod.rs  tests.rs
ldt/src/stir/prover/: mod.rs  tests.rs
ldt/src/stir/verifier/: mod.rs  tests.rs
ldt/tests/: fri.rs  pcs.rs
merkle-tree/: Cargo.toml
merkle-tree/benches/: merkle_tree.rs
merkle-tree/src/: lib.rs  merkle_tree.rs  mmcs.rs
np/: Cargo.toml
np/src/: common.rs  merkle_tree_bench.rs  merkle_tree_g_bench.rs  merkle_tree_m_bench.rs
np/src/hash/: poseidon_digest.rs
np/src/native/: blake3_bench.rs  keccak_bench.rs  merkle_tree_g_bench.rs  merkle_tree_m_bench.rs  poseidon2_bench.rs  rescue_bench.rs
np/src/native/goldilocks/: blake3_g_bench.rs  keccak_g_bench.rs  poseidon2_g_bench.rs  rescue_g_bench.rs
np/src/native/m31/: blake3_m_bench.rs  keccak_m_bench.rs  poseidon2_m_bench.rs  rescue_m_bench.rs
np/src/recursive/: keccak_rec_bench.rs  rec_keccak_blake3_m_bench.rs  rec_keccak_poseidon2_k_bench.rs  rec_merkle_tree_m_bench.rs  rec_poseidon2_poseidon2_k_bench.rs  rec_poseidon_blake3_m_bench.rs
poseidon2-air/: Cargo.toml
poseidon2-air/examples/: prove_poseidon2_baby_bear_keccak_zk.rs  prove_poseidon2_koala_bear_keccak.rs
stir/src/verifier/: mod.rs
symmetric/: Cargo.toml
symmetric/src/: compression.rs  lib.rs  sponge.rs
uni-stark/: Cargo.toml
uni-stark/tests/: fib_air.rs  mul_air.rs
