[package]
name = "p3-ldt"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
p3-challenger.workspace = true
p3-commit.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-interpolation.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-util.workspace = true
p3-baby-bear = { workspace = true, optional = true }
p3-goldilocks = { workspace = true, optional = true }
p3-symmetric = { workspace = true, optional = true }
p3-merkle-tree = { workspace = true, optional = true }
itertools.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true, features = ["derive", "alloc"] }

[dev-dependencies]
p3-baby-bear.workspace = true
p3-circle.workspace = true
p3-dft.workspace = true
p3-goldilocks.workspace = true
p3-keccak.workspace = true
p3-mersenne-31.workspace = true
p3-merkle-tree.workspace = true
p3-poseidon2.workspace = true
p3-symmetric.workspace = true
criterion.workspace = true
rand.workspace = true
serde_json = "1.0.113"

[[bench]]
name = "fold_even_odd"
harness = false

[[bench]]
name = "stir"
harness = false
required-features = ["stir-test-utils"]

[features]
stir-test-utils = ["dep:p3-baby-bear", "dep:p3-symmetric", "dep:p3-merkle-tree", "dep:p3-goldilocks"]